# garantido

./: README.md
fs/dir/path/: Cargo.toml
fs/dir/path/src/: path.rs
fs/dir/search_files/: Cargo.toml
fs/dir/search_files/src/: search_files.rs
fs/dir/search_files/vai/list_directories/: Cargo.toml
fs/dir/search_files/vai/list_directories/src/: main.rs
fs/dir/search_files/vai/searcher/: Cargo.toml
fs/dir/search_files/vai/searcher/src/: main.rs
fs/file/vai/asgard/: Cargo.toml
fs/file/vai/asgard/src/: main.rs
fs/file/vai/drika/: Cargo.toml
fs/file/vai/drika/src/: main.rs
fs/file/vai/split_lines/: Cargo.toml
fs/file/vai/split_lines/src/: main.rs
fs/opts/aliasopts/: Cargo.toml
fs/opts/aliasopts/src/: aliasopts.rs
fs/opts/aliasopts/vai/curbs/: Cargo.toml
fs/opts/aliasopts/vai/curbs/src/: main.rs
practice/aggregator/urionlinejudge/: Cargo.toml
practice/aggregator/urionlinejudge/src/: main.rs
practice/aggregator/urionlinejudge/src/iniciante/: _1020_idade_em_dias.rs  _1021_notas_e_moedas.rs  _1035_teste_de_selecao_1.rs  _1036_formula_de_bhaskara.rs  _1037_intervalo.rs  _1038_lanche.rs  mod.rs
sys/vai/necho/: Cargo.toml
sys/vai/necho/src/: main.rs
win/dynamo/: Cargo.toml
win/dynamo/src/: lib.rs
win/dynamo/vai/bitmeister/: Cargo.toml
win/dynamo/vai/bitmeister/src/: main.rs
win/dynamo/vai/vazando/: Cargo.toml
win/dynamo/vai/vazando/src/: main.rs
win/dynamo/vai/vip/: Cargo.toml
win/dynamo/vai/vip/src/: main.rs
