[package]
name = "bitmeister"
version = "0.1.0"
authors = ["Joao Pedrosa <joaopedrosa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }
dynamo = { path = "../../" }
path = { path = "../../../../fs/dir/path/" }