[package]
name = "vazando"
version = "0.1.0"
authors = ["Joao Pedrosa <joaopedrosa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "d3d9"] }

[dependencies]
murmur3 = "0.4.1"
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }
dynamo = { path = "../../" }
path = { path = "../../../../fs/dir/path/" }
search_files = { path = "../../../../fs/dir/search_files/" }
aliasopts = { path = "../../../../fs/opts/aliasopts/" }
regex = "1.3.1"